# bl702-rs-test

./: Cargo.toml  assemble.bat  assemble.ps1  assemble.sh  run.sh
.cargo/: config.toml
src/: main.rs
