[package]
name = "bl702-test"
version = "0.1.0"
edition = "2018"
license = "MIT"
keywords = ["hal", "bl702", "riscv"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/9names/bl702-test"
description = "testing out bl702-pac"

[dependencies]
bl702-pac = { git = "https://github.com/9names/bl702-pac", branch = "main" }
embedded-hal = "=0.2.7"
riscv = "0.8.0"
riscv-rt = "0.9.0"
panic-halt = "0.2.0"


[build-dependencies]
riscv-target = "0.1.2"
